--- a/app/src/main/res/drawable/background_nav_item_info.xml
+++ b/app/src/main/res/drawable/background_nav_item_info.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="10dp" />
-            <stroke android:color="@color/lightGray" android:width="1dp" />
+            <stroke android:color="@color/darkGray" android:width="1dp" />
         </shape>
     </item>
 </selector>
