--- a/app/src/main/res/drawable/ic_de_flag.xml
+++ b/app/src/main/res/drawable/ic_de_flag.xml
@@ -1,18 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="55.2dp"
-    android:height="38.4dp"
-    android:viewportWidth="55.2"
-    android:viewportHeight="38.4">
+    android:width="640dp"
+    android:height="480dp"
+    android:viewportWidth="640"
+    android:viewportHeight="480">
+  <path
+      android:pathData="M0,320h640v160H0z"
+      android:fillColor="#ffce00"/>
   <path
       android:fillColor="#FF000000"
-      android:pathData="M3.03,0h49.13c1.67,0 3.03,1.36 3.03,3.03v32.33c0,1.66 -1.36,3.02 -3.02,3.03H3.02C1.36,38.4 0,37.03 0,35.37V3.03C0,1.36 1.36,0 3.03,0z"
-      android:fillType="evenOdd"/>
+      android:pathData="M0,0h640v160H0z"/>
   <path
-      android:pathData="M0,12.8h55.2v22.57c0,1.67 -1.36,3.03 -3.03,3.03H3.03C1.36,38.4 0,37.04 0,35.37V12.8z"
-      android:fillColor="#d00"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M0,25.6h55.2v9.77c0,1.66 -1.36,3.02 -3.02,3.03H3.03A3.04,3.04 0,0 1,0 35.37V25.6z"
-      android:fillColor="#ffce00"
-      android:fillType="evenOdd"/>
+      android:pathData="M0,160h640v160H0z"
+      android:fillColor="#d00"/>
 </vector>
