chage dropdown layout to ConstraintLayout

--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -1,72 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/subItemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/background_nav_item"
     android:layout_marginRight="10dp"
     android:layout_marginLeft="10dp"
-    android:padding="10dp"
-    android:orientation="vertical">
-
+    android:padding="10dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/selected_view"
-                    android:layout_width="4dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="-5dp"
-                    android:layout_marginBottom="-5dp"
-                    android:background="?selectedColorPrimary"
-                    android:orientation="horizontal"
-                    android:visibility="invisible"
-                    tools:visibility="visible">
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/dropdownItemName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_weight="3"
-                    android:fontFamily="@font/museo_san_rounded500"
-                    android:text="Dropdown Item"
-                    android:layout_gravity="top"
-                    android:textColor="@color/white"
-                    android:textSize="14sp" />
-
-                <ImageView
-                    android:id="@+id/fastInternet"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_weight="1"
-                    android:layout_gravity="top"
-                    android:src="@drawable/ic_fast_internet" />
-
-                <TextView
-                    android:id="@+id/profile_status"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:layout_weight="1"
-                    android:layout_gravity="top"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="?attr/accentOrTextSecondary" />
+            android:id="@+id/llSelectedView"
+            android:layout_width="4dp"
+            android:layout_height="40dp"
+            android:background="?selectedColorPrimary"
+            android:orientation="horizontal"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" >
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tvDropdownItemName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:fontFamily="@font/museo_san_rounded500"
+            android:text="Dropdown Item"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/ivFastInternet"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginRight="70dp"
+            android:src="@drawable/ic_fast_internet"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvProfileStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="?attr/accentOrTextSecondary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <LinearLayout
-            android:id="@+id/view5"
+            android:id="@+id/llhorizontalLine"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginLeft="15dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="20dp"
             android:background="@color/lightGray"
-            android:orientation="horizontal" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
